Merge two AllModulePath tests